# operating-systems

directories/: CMakeLists.txt  README.md  main  main.c
directories/test_dir/test/: xd.txt
input_output/: CMakeLists.txt  README.md  file.txt  file1.txt  main  main.c  makefile  report.txt  results.txt
input_output/test/: lib_test.c  lib_test.h  sys_test.c  sys_test.h  test.c  test.h  utils.c  utils.h
inter_processes_communication/: CMakeLists.txt  README.md  client  client.c  makefile  server  server.c  utils.c
inter_processes_communication/posix/: .makefile.swp  client  client.c  server  server.c  utils.c
inter_processes_communication/system_v/: client.c  server.c  utils.c
mem&lib&time_managment/: CMakeLists.txt  Makefile  README.md  block.h  block_arrays_dynamically.c  block_arrays_statically.c  library.c  library.h  main  main.c  makefile  report2.txt  treść.txt
mem&lib&time_managment/library (ex 1)/: block_arrays_dynamically.c  block_arrays_dynamically.h  block_arrays_statically.c  block_arrays_statically.h  makefile
mem&lib&time_managment/test (ex 2)/: dynamic_arrays_test.c  dynamic_arrays_test.h  random.c  random.h  static_arrays_test.c  static_arrays_test.h  test.c  test.h
piepelines/: -Wall  CMakeLists.txt  README.md  file.txt  main  main.c  main2.c
piepelines/ex1/: file.txt  main  main.c  test_prog.c
piepelines/ex2/: main  main.c  master  master.c  slave  slave.c
process_managment/: CMakeLists.txt  README.md  ex_script  file.txt  main  main.c  makefile  test_prog  test_prog.c
process_managment/test_dir/other/: sdsd.cpp
semaphores/: CMakeLists.txt  README.md
signal_managment/: CMakeLists.txt  README.md  library.c  library.h  main
signal_managment/ex1/: main  main.c  print_date
signal_managment/ex2/: main.c  utils.c
signal_managment/ex3/: main.c
sockets/datagram/: server.h
sockets/stream/: server.h
threads/: CMakeLists.txt  README.md  main.c  main.h  output.ascii.pgm  report.txt  utils.c
threads/ex1/: report.txt
threads/ex1/ex_filters/: 2.txt  3.txt
threads/ex1/ex_images/: output.asci  output.ascii.pgm
threads/ex1/main/: main.c  main.h
threads/ex2/: library.c  library.h  main.c
threads/ex2/mutex/: example_text.txt  main  main.c  main.h  makefile  utils.c
threads/ex2/semaphores/: main  main.c  main.h  pan-tadeusz.txt  utils.c
threads/ex_images/: img.ascii.pgm  output.ascii.pgm
threads/main/: main.c  main.h
